k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-poc
  labels:
    app.kubernetes.io/name: kube-poc
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-poc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-poc
    spec:
      containers:
        - name: kube-poc
          image: docker.io/kkryptocode/kube-poc:1.1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
