k8s/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: kube-poc
  labels:
    app.kubernetes.io/name: kube-poc
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: kube-poc
